<resources>
    <string name="app_name">E-Ticket Kereta</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_a_member_sign_in_now">Not a Member ? Sign in Now</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account_login_now">Already have Account ? Login Now</string>
    <string name="hello_world">Hello World</string>
    <string name="payment">Payment</string>
    <string name="bayar">Bayar</string>
</resources>
